--- a/src/app/expense/wallet/wallet.component.html
+++ b/src/app/expense/wallet/wallet.component.html
@@ -73,7 +73,7 @@
   </div>
 
   <!-- Create Wallet Modal -->
-  <app-create-wallet #createWalletModal (walletCreated)="onWalletCreated($event)"></app-create-wallet> 
+  <app-create-wallet #createWalletModal [currency]="currency"(walletCreated)="onWalletCreated($event)"></app-create-wallet> 
 
 
 <app-confirmation-dialog #deleteDialog
